test/fixtures/open-report/errors/two-with-warnings.js
// error
// todo: this is a warning